# tsftemplate

./: .dotstop.dot  .gitignore  README.md  mkdocs.yaml  pyproject.toml  todos.md
.github/actions/run-oft/: README.md  action.yaml
.github/workflows/: docs.yaml  docs.yml  release.yaml  release.yml
docs/: one_item.md  three_stages.md  tools.md
mkdocs/: README.md
mkdocs/oft/: .nav.yml  oft-requirements.md
mkdocs/trustable/: .nav.yml
trustable/tsftemplate/: TSFTEMPLATE-PROJECT_README.md
