[project]
name = "tsftemplate"
version = "0.1.0"
dependencies = [
    "mkdocs~=1.6",
    "mkdocs-awesome-nav",
    "mkdocs-markdownextradata-plugin",
    "mkdocs-material",
    "pymdown-extensions",
]

[tool.setuptools.packages.find]
include = ["docs"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]
